--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -7,32 +7,25 @@
 @import "blueprint/form";
 @import "blueprint/buttons";
 
-
-//#headSection {
-//  @include column(24,true);
-//  text-align: center;
-//  background-image: url("klairvoyantlogo.jpg");
-//  background-position: center top;
-//  background-repeat: no-repeat;
-//  font-family: 'Tangerine', serif;
-//  font-size: 100px;
-//  color: #4cb4e9;
-//}
 .image_size {
   width: 100%;    //700 *525
-  height:300px;//480
+  height:350px;//480
 }
+
+
 .head_colour {
   color: #0198dd;
   font-size: 25px;
   font-weight: bolder;
   background-color: black;
+  font-family: 'Varela Round', sans-serif;
   position: relative;
   bottom:10px;
   padding-left: 5px;
 
 }
 .pushFromTop {
+  font-family: 'Varela Round', sans-serif;
   position: relative;
   top: 10px;
 }
@@ -83,9 +76,6 @@
   padding-top: 30px;
 }
 
-//#testimonials {
-//  @include column(8,true);
-//}
 
 #footerSection {
   @include column(24, true);
@@ -139,24 +129,24 @@ div.feedburnerFeedBlock ul {
 //#menu1 {
 //  @include column(10,true);
 //}
-#leftside {
-  @include column(2);
-  height: 450px;
-}
-#rightside {
-  @include column(2,true);
-  height: 450px;
-}
+//#leftside {
+//  @include column(2);
+//  height: 450px;
+//}
+//#rightside {
+//  @include column(2,true);
+//  height: 450px;
+//}
 .head1 {
   color:#1574c4;
   font-size: 30px;
-  font-family: sans-serif;
+  font-family: 'Varela Round', sans-serif;
   text-align: center;
   margin-bottom: 20px;
 }
 .head2 {
   font-size: 25px;
-  font-family: sans-serif;
+  font-family: 'Varela Round', sans-serif;
   color: #ffffff;
   border-style: solid;
   border-width: 1px;
@@ -181,10 +171,12 @@ div.feedburnerFeedBlock ul {
   width: 550px;
   padding-left: 20%;
 }
+
 .labelText
  {
 color:#1574c4;
 font-size:20px;
+font-family: 'Varela Round', sans-serif;
 }
 .notice2 {
 font-size: 20px;
@@ -206,6 +198,13 @@ font-family: 'Varela Round', sans-serif;
   text-align: center;
   padding-bottom: 30px;
 }
+.contactpara2 {
+  font-size: 20px;
+  font-family: 'Varela Round', sans-serif;
+  text-align: justify;
+  padding-bottom: 30px;
+}
+
 .subHead {
   color:#1574c4;
   font-size: 20px;
@@ -214,3 +213,57 @@ font-family: 'Varela Round', sans-serif;
 }
 
 /*  modified on march 14 2013*/
+
+#myCarousel h1 {
+  color:#1574c4;
+  font-size: 25px;
+}
+
+#myCarousel h1 a {
+  text-decoration: none;
+}
+
+.text {
+
+  font-family: 'Varela Round', sans-serif;
+  font-size: 20px;
+  padding: 10px;
+  //padding-bottom: 40px;
+  text-align: justify;
+}
+.text p {
+  padding-bottom: 10px;
+}
+.text h4 {
+  color:#1574c4;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 25px;
+
+
+
+}
+
+.item {
+  font-family: 'Varela Round', sans-serif;
+}
+
+.head3 {
+  color:#1574c4;
+  font-size: 18px;
+  font-family: 'Varela Round', sans-serif;
+  text-align: center;
+  padding-bottom: 30px;
+
+
+}
+
+.head3 a {
+  text-decoration: none;
+}
+
+.moveDownRight {
+  padding-top: 20px;
+  padding-left: 60px;
+}
